--- a/app/src/main/res/layout/list_trees_row.xml
+++ b/app/src/main/res/layout/list_trees_row.xml
@@ -10,11 +10,11 @@
         android:layout_height="match_parent">
         <LinearLayout android:id="@+id/lokaliz_layout" android:layout_height="wrap_content" android:baselineAligned="false" android:layout_width="match_parent">
             <TextView android:id="@+id/row_nazwa_polska_txt"
-                android:layout_width="0dp" android:layout_weight="1" android:layout_height="wrap_content"></TextView>
+                android:layout_width="0dp" android:layout_weight="1" android:layout_height="101dp"></TextView>
             <TextView android:id="@+id/row_nazwa_latin_txt"
-                android:layout_width="0dp" android:layout_weight="1" android:layout_height="wrap_content"></TextView>
+                android:layout_width="0dp" android:layout_weight="1" android:layout_height="match_parent"></TextView>
             <TextView android:id="@+id/row_wojewodztwo_txt"
-                android:layout_width="0dp" android:layout_weight="1" android:layout_height="wrap_content"></TextView>
+                android:layout_width="0dp" android:layout_weight="1" android:layout_height="match_parent"></TextView>
         </LinearLayout>
     </LinearLayout>
 
