--- a/app/src/main/res/layout/activity_register2.xml
+++ b/app/src/main/res/layout/activity_register2.xml
@@ -35,7 +35,7 @@
                 android:layout_height="wrap_content">
 
                 <AutoCompleteTextView
-                    android:id="@+id/email"
+                    android:id="@+id/reg_login"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/login_placeholder"
@@ -50,7 +50,7 @@
                 android:layout_height="wrap_content">
 
                 <EditText
-                    android:id="@+id/password"
+                    android:id="@+id/reg_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/haslo_placeholder2"
@@ -68,7 +68,7 @@
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
                 android:ems="10"
-                android:id="@+id/editText"
+                android:id="@+id/reg_rep_passw"
                 android:layout_gravity="center_horizontal"
                 android:hint="Powtórz hasło"/>
 
@@ -77,7 +77,7 @@
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress"
                 android:ems="10"
-                android:id="@+id/editText2"
+                android:id="@+id/reg_email"
                 android:layout_gravity="center_horizontal"
                 android:hint="Adres email"/>
 
