--- a/app/src/main/res/layout/activity_list_trees.xml
+++ b/app/src/main/res/layout/activity_list_trees.xml
@@ -8,9 +8,19 @@
     tools:context="com.example.formel.bazadrzewmobile.activities.ListTreesActivity">
 
     <ListView
+        android:layout_marginTop="100dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/treeListListview"
-        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/filterPolishName"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="42dp" />
+
 </RelativeLayout>
